issue-10 - Group Identifiers now represented by GroupURI objects